@@ -8,6 +8,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 /**
@@ -50,6 +51,13 @@ public class TripStopTimes {
         map.put(key, sort(list));
     }
 
+    public void removeIf(Predicate<Trip> test) {
+        List<Trip> removeKeys = map.keySet().stream().filter(test).collect(Collectors.toList());
+        for (Trip removeKey : removeKeys) {
+            map.remove(removeKey);
+        }
+    }
+
     /**
      * Return a copy of the internal map. Changes in the source are not reflected
      * in the destination (returned Map), and visa versa.
@@ -57,7 +65,7 @@ public class TripStopTimes {
      * The returned map is immutable.
      */
     public Map<Trip, List<StopTime>> asImmutableMap() {
-        return Collections.unmodifiableMap(new HashMap<>(map));
+        return Map.copyOf(map);
     }
 
     public int size() {
@@ -69,14 +77,6 @@ public class TripStopTimes {
      */
     public Iterable<Trip> keys() {
         return map.keySet();
-    }
-
-    /**
-     * The Trip is mutable (the id may change). If the #hashCode changes the map must be
-     * reindex to work properly.
-     */
-    public void reindex() {
-        map = new HashMap<>(map);
     }
 
 
